--- a/eda.ipynb
+++ b/eda.ipynb
@@ -2,201 +2,47 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import streamlit_authenticator as stauth"
+    "import streamlit_authenticator as stauth\n",
+    "import sqlite3\n",
+    "import string\n",
+    "import random\n",
+    "import hashlib\n",
+    "\n",
+    "\n",
+    "conn_sqlite = sqlite3.connect(\"credentials.db\")\n",
+    "c = conn_sqlite.cursor()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_excel('pegawai110.xlsx', dtype={'NIP':'str','KD':'str'},usecols=['NIP','Nama','Kantor','KD'])"
+    "def make_hashes(password):\n",
+    "\treturn hashlib.sha256(str.encode(password)).hexdigest()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data['password'] = 'KilauJaktim'+'@'+data['NIP']"
+    "def generate_random_string(length):\n",
+    "    random.seed(10)\n",
+    "    letters = string.ascii_lowercase + string.ascii_uppercase + string.digits\n",
+    "    return ''.join(random.choice(letters) for _ in range(length))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Nama</th>\n",
-       "      <th>NIP</th>\n",
-       "      <th>Kantor</th>\n",
-       "      <th>KD</th>\n",
-       "      <th>password</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>MUHAMMAD ISMIRANSYAH M. ZAIN</td>\n",
-       "      <td>060077930</td>\n",
-       "      <td>Kanwil DJP Jakarta Timur</td>\n",
-       "      <td>110</td>\n",
-       "      <td>KilauJaktim@060077930</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>SUGENG SATOTO</td>\n",
-       "      <td>060094070</td>\n",
-       "      <td>Kanwil DJP Jakarta Timur</td>\n",
-       "      <td>110</td>\n",
-       "      <td>KilauJaktim@060094070</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>DESSY EKA PUTRI</td>\n",
-       "      <td>060087065</td>\n",
-       "      <td>Kanwil DJP Jakarta Timur</td>\n",
-       "      <td>110</td>\n",
-       "      <td>KilauJaktim@060087065</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>SANDRA BUANA</td>\n",
-       "      <td>060083161</td>\n",
-       "      <td>Kanwil DJP Jakarta Timur</td>\n",
-       "      <td>110</td>\n",
-       "      <td>KilauJaktim@060083161</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>ARDHIE PERMADI</td>\n",
-       "      <td>060083105</td>\n",
-       "      <td>Kanwil DJP Jakarta Timur</td>\n",
-       "      <td>110</td>\n",
-       "      <td>KilauJaktim@060083105</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1082</th>\n",
-       "      <td>NASTRIA PRATAMA</td>\n",
-       "      <td>930302289</td>\n",
-       "      <td>KPP Madya Dua Jakarta Timur</td>\n",
-       "      <td>097</td>\n",
-       "      <td>KilauJaktim@930302289</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1083</th>\n",
-       "      <td>ADRY NOVIANTO</td>\n",
-       "      <td>860013856</td>\n",
-       "      <td>KPP Madya Dua Jakarta Timur</td>\n",
-       "      <td>097</td>\n",
-       "      <td>KilauJaktim@860013856</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1084</th>\n",
-       "      <td>HERU IRFANTO</td>\n",
-       "      <td>808320132</td>\n",
-       "      <td>KPP Madya Dua Jakarta Timur</td>\n",
-       "      <td>097</td>\n",
-       "      <td>KilauJaktim@808320132</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1085</th>\n",
-       "      <td>MIFTAKHUL PRATAMA PUTRA</td>\n",
-       "      <td>810600567</td>\n",
-       "      <td>KPP Madya Dua Jakarta Timur</td>\n",
-       "      <td>097</td>\n",
-       "      <td>KilauJaktim@810600567</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1086</th>\n",
-       "      <td>STACIA ARGANI</td>\n",
-       "      <td>820006345</td>\n",
-       "      <td>KPP Madya Dua Jakarta Timur</td>\n",
-       "      <td>097</td>\n",
-       "      <td>KilauJaktim@820006345</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1087 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                              Nama        NIP                       Kantor  \\\n",
-       "0     MUHAMMAD ISMIRANSYAH M. ZAIN  060077930     Kanwil DJP Jakarta Timur   \n",
-       "1                    SUGENG SATOTO  060094070     Kanwil DJP Jakarta Timur   \n",
-       "2                  DESSY EKA PUTRI  060087065     Kanwil DJP Jakarta Timur   \n",
-       "3                     SANDRA BUANA  060083161     Kanwil DJP Jakarta Timur   \n",
-       "4                   ARDHIE PERMADI  060083105     Kanwil DJP Jakarta Timur   \n",
-       "...                            ...        ...                          ...   \n",
-       "1082               NASTRIA PRATAMA  930302289  KPP Madya Dua Jakarta Timur   \n",
-       "1083                 ADRY NOVIANTO  860013856  KPP Madya Dua Jakarta Timur   \n",
-       "1084                  HERU IRFANTO  808320132  KPP Madya Dua Jakarta Timur   \n",
-       "1085       MIFTAKHUL PRATAMA PUTRA  810600567  KPP Madya Dua Jakarta Timur   \n",
-       "1086                 STACIA ARGANI  820006345  KPP Madya Dua Jakarta Timur   \n",
-       "\n",
-       "       KD               password  \n",
-       "0     110  KilauJaktim@060077930  \n",
-       "1     110  KilauJaktim@060094070  \n",
-       "2     110  KilauJaktim@060087065  \n",
-       "3     110  KilauJaktim@060083161  \n",
-       "4     110  KilauJaktim@060083105  \n",
-       "...   ...                    ...  \n",
-       "1082  097  KilauJaktim@930302289  \n",
-       "1083  097  KilauJaktim@860013856  \n",
-       "1084  097  KilauJaktim@808320132  \n",
-       "1085  097  KilauJaktim@810600567  \n",
-       "1086  097  KilauJaktim@820006345  \n",
-       "\n",
-       "[1087 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +53,200 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['$2b$12$7cJULG9oBIBmmACraoLgNudBODfxNbXLK./osgWIVgk2d/6mAQ6hm']"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "makehash(['sugengw07'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['$2b$12$KrCrxwowUUnx33cdjD.vVOdKE5SpKJC3HIagVpRjVFEhBeLbRJIwe']"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "makehash(['sugengw07'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_excel('pegawai110.xlsx', dtype={'NIP':'str','KD':'str'},usecols=['NIP','Nama','Kantor','KD'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['password'] = data['NIP'].apply(lambda x: x +'@'+ generate_random_string(4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['password_hashed'] = data['password'].apply(lambda x: make_hashes(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.to_excel('login.xlsx',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.rename(columns={'Nama':'names', 'NIP':'usernames', 'Kantor':'kantor', 'KD':'kd'},inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data= data[['usernames','names','password_hashed','kd','kantor']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x2b0fbc600c0>"
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.execute('CREATE TABLE IF NOT EXISTS user(usernames text, names text,password text, kd text, kantor text)')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_user(nip, nama, password,kode,kpp):\n",
+    "    c.execute('INSERT INTO user(usernames, names, password,kd,kantor) VALUES(?,?,?,?,?)',(nip,nama, password,kode,kpp))\n",
+    "    conn_sqlite.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "usernames = data['usernames'].tolist()\n",
+    "names = data['names'].tolist()\n",
+    "password = data['password_hashed'].tolist()\n",
+    "kd = data['kd'].tolist()\n",
+    "kantor = data['kantor'].tolist()\n",
+    "for (username,name,passw,kode,kpp) in zip(usernames,names,password, kd, kantor):\n",
+    "    add_user(username,name,passw,kode,kpp)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x2b0fbb901c0>"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# c.execute('DROP TABLE user')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nip = [x['NIP'] for x in data]\n",
+    "nama = [x['Nama'] for x in data]\n",
+    "kantor = [x['Kantor'] for x in data]\n",
+    "password = [x['password_hashed'] for x in data]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "add_user()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['password_hashed']='x '\n",
+    "for idx,x in enumerate(data['password']):\n",
+    "    print(data.loc[idx,'password_hashed':'password_hashed'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,29 +255,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\sugengw07\\AppData\\Local\\Temp\\ipykernel_12588\\584411665.py:1: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  data['pass_hashed'] = data['password'].apply(lambda x: makehash([x])[0])\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "conn_sqlite.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "data['pass_hashed'] = data['password'].apply(lambda x: makehash([x])[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,49 +310,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "CatalogException",
-     "evalue": "Catalog Error: Table with name credential does not exist!\nDid you mean \"information_schema.schemata\"?",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mCatalogException\u001b[0m                          Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[79], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m db\u001b[39m.\u001b[39;49mexecute(\u001b[39m'\u001b[39;49m\u001b[39mdrop table credential \u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
-      "\u001b[1;31mCatalogException\u001b[0m: Catalog Error: Table with name credential does not exist!\nDid you mean \"information_schema.schemata\"?"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "db.execute('drop table credential ')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ParserException",
-     "evalue": "Parser Error: syntax error at or near \"from\"\nLINE 1: create table credentials from credential\n                                 ^",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mParserException\u001b[0m                           Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[64], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m db\u001b[39m.\u001b[39;49mexecute(\u001b[39m'\u001b[39;49m\u001b[39mcreate table credentials from credential\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
-      "\u001b[1;31mParserException\u001b[0m: Parser Error: syntax error at or near \"from\"\nLINE 1: create table credentials from credential\n                                 ^"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "db.execute('create table credentials from credential')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,21 +346,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "$2b$12$NHHMlYdHHHk3gjEqcJ71medYmF4PN/zdtJMXqlp.G25YG2xeeuoq2\n",
-      "$2b$12$uHZzjj0lUx8m.pdyiQwzoe7BpC8YeEiNqTg7IDJRj86FybpVOoF62\n",
-      "$2b$12$ReC9emPw5nKWoiQ4ePrEKeZpv88MTldXKk.fybMsR1nGb0fWNk1Gy\n",
-      "$2b$12$AGBBHqFhLXFKGzbN.Simou2WXWqfRqH8Opwcc.PXyu0jtcnXrSFem\n",
-      "$2b$12$bOg757ifo8.NLExn1rh9a.IXnvVZ863Zb73TphnYXMjeHBzjLFMaO\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for passq in s['pass_hashed']:\n",
     "    print(passq)"
