add update_db via cron

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -36,6 +36,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from urllib.parse import quote_plus\n",
+    "from sqlalchemy import create_engine\n",
+    "import pandas as pd\n",
+    "from timeit import default_timer\n",
+    "\n",
+    "# from realisasi import alco_perbulan\n",
+    "\n",
+    "password = quote_plus(\"\")\n",
+    "mpninfo_con = create_engine(\"mysql://810202558:KilauJaktim02558@10.20.254.228/mpninfo\")\n",
+    "postgre_con = create_engine(\n",
+    "    \"postgresql://oc:{}@10.20.254.228/penerimaan\".format(password)\n",
+    ")\n",
+    "postgre_con_uri = \"postgresql://oc:{}@10.20.254.228/penerimaan\".format(password)\n",
+    "mpninfo_con_uri = \"mysql://810202558:KilauJaktim02558@10.20.254.228/mpninfo\"\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
    "outputs": [],
