--- a/eda.ipynb
+++ b/eda.ipynb
@@ -2,9 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-07-10 23:25:44.475 \n",
+      "  \u001b[33m\u001b[1mWarning:\u001b[0m to view this Streamlit app on a browser, run it with the following\n",
+      "  command:\n",
+      "\n",
+      "    streamlit run c:\\Users\\sugengw07\\.conda\\envs\\tems\\Lib\\site-packages\\ipykernel_launcher.py [ARGUMENTS]\n",
+      "2023-07-10 23:25:44.632 No runtime found, using MemoryCacheStorageManager\n",
+      "2023-07-10 23:25:44.634 No runtime found, using MemoryCacheStorageManager\n",
+      "2023-07-10 23:25:44.636 No runtime found, using MemoryCacheStorageManager\n",
+      "2023-07-10 23:25:44.638 No runtime found, using MemoryCacheStorageManager\n",
+      "2023-07-10 23:25:44.639 No runtime found, using MemoryCacheStorageManager\n",
+      "2023-07-10 23:25:44.640 No runtime found, using MemoryCacheStorageManager\n",
+      "2023-07-10 23:25:44.641 No runtime found, using MemoryCacheStorageManager\n",
+      "2023-07-10 23:25:44.642 No runtime found, using MemoryCacheStorageManager\n",
+      "2023-07-10 23:25:44.643 No runtime found, using MemoryCacheStorageManager\n",
+      "2023-07-10 23:25:44.644 No runtime found, using MemoryCacheStorageManager\n",
+      "2023-07-10 23:25:44.645 No runtime found, using MemoryCacheStorageManager\n",
+      "2023-07-10 23:25:44.646 No runtime found, using MemoryCacheStorageManager\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import streamlit as st \n",
@@ -31,12 +55,76 @@
     "    sankey_subsektor,\n",
     "    generate_rgba_colors,\n",
     "    explore_data,\n",
-    ")"
+    ")\n",
+    "from yaml.loader import SafeLoader\n",
+    "import yaml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"D:\\PROJECTS\\TEMS\\.streamlit\\login.yaml\") as file:\n",
+    "    config = yaml.load(file, Loader=SafeLoader)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'usernames': {'060098992': {'email': None,\n",
+       "   'name': 'HERMAWAN',\n",
+       "   'password': '$2b$12$q0JaQ8JKzS4DxMsS8Y2OJOyklNImhwBHZwhp0CLre2sA.nI.lH53C'},\n",
+       "  '060077930': {'email': None,\n",
+       "   'name': 'MUHAMMAD ISMIRANSYAH M. ZAIN',\n",
+       "   'password': '$2b$12$2iOgkgdCRpBXziJ6qOuApu4ERfclryQUeVaODzWmZoO7i0fjQRo1q'},\n",
+       "  '060087065': {'email': None,\n",
+       "   'name': 'DESSY EKA PUTRI',\n",
+       "   'password': '$2b$12$YiVsALwTjDQyTVVKZqlgUOt.dLArM.hlEjckznjqrrJS47rOREnjS'},\n",
+       "  '910222266': {'email': None,\n",
+       "   'name': 'EMANUEL EKO DARMAWAN',\n",
+       "   'password': '$2b$12$0H5.Yrhv.c1TCzf3TfkE6ecjI2hc.UWqNGQSHAYHObkgLOwF35.jO'},\n",
+       "  '958633540': {'email': None,\n",
+       "   'name': 'WIRAWAN THO`AT ARUMDHANI',\n",
+       "   'password': '$2b$12$K23Mk7N2DBHld4bVIorkeeiascmHUBNCKvQSPu103fw5ocygiqbee'},\n",
+       "  '060105487': {'email': None,\n",
+       "   'name': 'HAWELL JECKSON',\n",
+       "   'password': '$2b$12$y0eo90dIyUApdhr79vqTse8BStnf8C7djiIb06vHoaBKUGiO8AfBe'},\n",
+       "  '953800975': {'email': None,\n",
+       "   'name': 'DEWI MARGARET LAMRIA PANGARIBUAN',\n",
+       "   'password': '$2b$12$CZIe1CHvSduqoHPIguwqNe8te8qBmxWf32P5r3/uBN14KswFQt2TO'},\n",
+       "  '817932323': {'email': None,\n",
+       "   'name': 'BAYU AJI SETIAWAN',\n",
+       "   'password': '$2b$12$t0y4LpvsISAJjplWG919me9JhVb7eIYetOrdti4wRCDXvHbevcd12'},\n",
+       "  '958634307': {'email': None,\n",
+       "   'name': 'AGIL WIDIYATMOKO',\n",
+       "   'password': '$2b$12$n5txLiGKbBetZqrgv.R2XO0ZqkWRNHfXlwBCSS0A8Pi1BboHGDuhG'},\n",
+       "  'Jaktim': {'email': None,\n",
+       "   'name': 'Kanwil DJP Jakarta Timur',\n",
+       "   'password': '$2b$12$IOmUm8RuDxB.ma.KdAHXr.udZlhvoODl.P0m0JcvWqT8uBEi/eh7W'},\n",
+       "  '810202558': {'email': None,\n",
+       "   'name': 'Sugeng Wahyudi',\n",
+       "   'password': '$2b$12$hwy7WHh3uzUj4XcPKdgG8O5vavC3nqHPOv3Q0/0u7tb.nchE9VAUK'}}}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "config['credentials']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,136 +157,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-07-09 21:13:37.735 No runtime found, using MemoryCacheStorageManager\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>NM_KATEGORI</th>\n",
-       "      <th>BULANBAYAR</th>\n",
-       "      <th>BRUTO2023</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>ADMIN. PEMERINTAHAN &amp; JAMINAN SOSIAL</td>\n",
-       "      <td>1</td>\n",
-       "      <td>7.677392e+10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>ADMIN. PEMERINTAHAN &amp; JAMINAN SOSIAL</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1.148359e+11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>ADMIN. PEMERINTAHAN &amp; JAMINAN SOSIAL</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1.549767e+11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>ADMIN. PEMERINTAHAN &amp; JAMINAN SOSIAL</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2.648945e+11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>ADMIN. PEMERINTAHAN &amp; JAMINAN SOSIAL</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1.985832e+11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>149</th>\n",
-       "      <td>TREATMENT AIR,LIMBAH</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3.524871e+09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>150</th>\n",
-       "      <td>TREATMENT AIR,LIMBAH</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1.794939e+09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>151</th>\n",
-       "      <td>TREATMENT AIR,LIMBAH</td>\n",
-       "      <td>5</td>\n",
-       "      <td>4.940407e+09</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>152</th>\n",
-       "      <td>TREATMENT AIR,LIMBAH</td>\n",
-       "      <td>6</td>\n",
-       "      <td>8.947653e+08</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>153</th>\n",
-       "      <td>TREATMENT AIR,LIMBAH</td>\n",
-       "      <td>7</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>154 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                              NM_KATEGORI  BULANBAYAR     BRUTO2023\n",
-       "0    ADMIN. PEMERINTAHAN & JAMINAN SOSIAL           1  7.677392e+10\n",
-       "1    ADMIN. PEMERINTAHAN & JAMINAN SOSIAL           2  1.148359e+11\n",
-       "2    ADMIN. PEMERINTAHAN & JAMINAN SOSIAL           3  1.549767e+11\n",
-       "3    ADMIN. PEMERINTAHAN & JAMINAN SOSIAL           4  2.648945e+11\n",
-       "4    ADMIN. PEMERINTAHAN & JAMINAN SOSIAL           5  1.985832e+11\n",
-       "..                                    ...         ...           ...\n",
-       "149                  TREATMENT AIR,LIMBAH           3  3.524871e+09\n",
-       "150                  TREATMENT AIR,LIMBAH           4  1.794939e+09\n",
-       "151                  TREATMENT AIR,LIMBAH           5  4.940407e+09\n",
-       "152                  TREATMENT AIR,LIMBAH           6  8.947653e+08\n",
-       "153                  TREATMENT AIR,LIMBAH           7  0.000000e+00\n",
-       "\n",
-       "[154 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "data_sektor_awal = sektor_yoy(filter, filter22, includewp=False)\n",
     "# data_sektor = data_sektor_awal[0]\n",
