final_with login

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -2,67 +2,69 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-07-10 23:25:44.475 \n",
-      "  \u001b[33m\u001b[1mWarning:\u001b[0m to view this Streamlit app on a browser, run it with the following\n",
-      "  command:\n",
-      "\n",
-      "    streamlit run c:\\Users\\sugengw07\\.conda\\envs\\tems\\Lib\\site-packages\\ipykernel_launcher.py [ARGUMENTS]\n",
-      "2023-07-10 23:25:44.632 No runtime found, using MemoryCacheStorageManager\n",
-      "2023-07-10 23:25:44.634 No runtime found, using MemoryCacheStorageManager\n",
-      "2023-07-10 23:25:44.636 No runtime found, using MemoryCacheStorageManager\n",
-      "2023-07-10 23:25:44.638 No runtime found, using MemoryCacheStorageManager\n",
-      "2023-07-10 23:25:44.639 No runtime found, using MemoryCacheStorageManager\n",
-      "2023-07-10 23:25:44.640 No runtime found, using MemoryCacheStorageManager\n",
-      "2023-07-10 23:25:44.641 No runtime found, using MemoryCacheStorageManager\n",
-      "2023-07-10 23:25:44.642 No runtime found, using MemoryCacheStorageManager\n",
-      "2023-07-10 23:25:44.643 No runtime found, using MemoryCacheStorageManager\n",
-      "2023-07-10 23:25:44.644 No runtime found, using MemoryCacheStorageManager\n",
-      "2023-07-10 23:25:44.645 No runtime found, using MemoryCacheStorageManager\n",
-      "2023-07-10 23:25:44.646 No runtime found, using MemoryCacheStorageManager\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import streamlit as st \n",
-    "conn = st.experimental_connection(\"ppmpkm\", type=\"sql\")\n",
-    "from scripts.db import (\n",
-    "    data_ket,\n",
-    "    target,\n",
-    "    sektor,\n",
-    "    klu,\n",
-    "    sektor_yoy,\n",
-    "    jns_pajak,\n",
-    "    kjs,\n",
-    "    kpi,\n",
-    "    linedata,\n",
-    "    naikturun,\n",
-    "    proporsi,\n",
-    "    cluster,\n",
-    "    data_sankey,\n",
-    "    generate_rgba_colors,\n",
-    "    top10kpp,\n",
-    "    sektor_yoy,\n",
-    "    growth_month,\n",
-    "    subsektor,\n",
-    "    sankey_subsektor,\n",
-    "    generate_rgba_colors,\n",
-    "    explore_data,\n",
-    ")\n",
-    "from yaml.loader import SafeLoader\n",
-    "import yaml"
+    "import sqlite3\n",
+    "# import streamlit as st \n",
+    "# conn = st.experimental_connection(\"ppmpkm\", type=\"sql\")\n",
+    "# from scripts.db import (\n",
+    "#     data_ket,\n",
+    "#     target,\n",
+    "#     sektor,\n",
+    "#     klu,\n",
+    "#     sektor_yoy,\n",
+    "#     jns_pajak,\n",
+    "#     kjs,\n",
+    "#     kpi,\n",
+    "#     linedata,\n",
+    "#     naikturun,\n",
+    "#     proporsi,\n",
+    "#     cluster,\n",
+    "#     data_sankey,\n",
+    "#     generate_rgba_colors,\n",
+    "#     top10kpp,\n",
+    "#     sektor_yoy,\n",
+    "#     growth_month,\n",
+    "#     subsektor,\n",
+    "#     sankey_subsektor,\n",
+    "#     generate_rgba_colors,\n",
+    "#     explore_data,\n",
+    "# )\n",
+    "# from yaml.loader import SafeLoader\n",
+    "# import yaml"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kueri = \"\"\" SELECT \n",
+    "    p.\"NM_KATEGORI\" ,p.\"NM_GOLPOK\",p.\"TAHUNBAYAR\" ,p.\"BULANBAYAR\",\n",
+    "    sum(p.\"NOMINAL\") \"BRUTO\"\n",
+    "    FROM \n",
+    "    ppmpkm p \n",
+    "    WHERE p.\"KET\"  in('MPN','SPM')  AND  p.\"TAHUNBAYAR\"=2023 and p.\"BULANBAYAR\" <7 \n",
+    "    GROUP BY p.\"NM_KATEGORI\" ,p.\"NM_GOLPOK\", p.\"TAHUNBAYAR\",p.\"BULANBAYAR\"  \"\"\"\n",
+    "data =conn.query(kueri)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.to_excel(r'D:\\HASILKUERI\\alco23_sektor.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,52 +74,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'usernames': {'060098992': {'email': None,\n",
-       "   'name': 'HERMAWAN',\n",
-       "   'password': '$2b$12$q0JaQ8JKzS4DxMsS8Y2OJOyklNImhwBHZwhp0CLre2sA.nI.lH53C'},\n",
-       "  '060077930': {'email': None,\n",
-       "   'name': 'MUHAMMAD ISMIRANSYAH M. ZAIN',\n",
-       "   'password': '$2b$12$2iOgkgdCRpBXziJ6qOuApu4ERfclryQUeVaODzWmZoO7i0fjQRo1q'},\n",
-       "  '060087065': {'email': None,\n",
-       "   'name': 'DESSY EKA PUTRI',\n",
-       "   'password': '$2b$12$YiVsALwTjDQyTVVKZqlgUOt.dLArM.hlEjckznjqrrJS47rOREnjS'},\n",
-       "  '910222266': {'email': None,\n",
-       "   'name': 'EMANUEL EKO DARMAWAN',\n",
-       "   'password': '$2b$12$0H5.Yrhv.c1TCzf3TfkE6ecjI2hc.UWqNGQSHAYHObkgLOwF35.jO'},\n",
-       "  '958633540': {'email': None,\n",
-       "   'name': 'WIRAWAN THO`AT ARUMDHANI',\n",
-       "   'password': '$2b$12$K23Mk7N2DBHld4bVIorkeeiascmHUBNCKvQSPu103fw5ocygiqbee'},\n",
-       "  '060105487': {'email': None,\n",
-       "   'name': 'HAWELL JECKSON',\n",
-       "   'password': '$2b$12$y0eo90dIyUApdhr79vqTse8BStnf8C7djiIb06vHoaBKUGiO8AfBe'},\n",
-       "  '953800975': {'email': None,\n",
-       "   'name': 'DEWI MARGARET LAMRIA PANGARIBUAN',\n",
-       "   'password': '$2b$12$CZIe1CHvSduqoHPIguwqNe8te8qBmxWf32P5r3/uBN14KswFQt2TO'},\n",
-       "  '817932323': {'email': None,\n",
-       "   'name': 'BAYU AJI SETIAWAN',\n",
-       "   'password': '$2b$12$t0y4LpvsISAJjplWG919me9JhVb7eIYetOrdti4wRCDXvHbevcd12'},\n",
-       "  '958634307': {'email': None,\n",
-       "   'name': 'AGIL WIDIYATMOKO',\n",
-       "   'password': '$2b$12$n5txLiGKbBetZqrgv.R2XO0ZqkWRNHfXlwBCSS0A8Pi1BboHGDuhG'},\n",
-       "  'Jaktim': {'email': None,\n",
-       "   'name': 'Kanwil DJP Jakarta Timur',\n",
-       "   'password': '$2b$12$IOmUm8RuDxB.ma.KdAHXr.udZlhvoODl.P0m0JcvWqT8uBEi/eh7W'},\n",
-       "  '810202558': {'email': None,\n",
-       "   'name': 'Sugeng Wahyudi',\n",
-       "   'password': '$2b$12$hwy7WHh3uzUj4XcPKdgG8O5vavC3nqHPOv3Q0/0u7tb.nchE9VAUK'}}}"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "config['credentials']"
    ]
