fix login_form local variable cannot acces

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -2,16 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import sqlite3\n",
-    "conn_sqlite = sqlite3.connect(\"login.db\")\n",
-    "c = conn_sqlite.cursor()\n",
-    "# import streamlit as st \n",
-    "# conn = st.experimental_connection(\"ppmpkm\", type=\"sql\")\n",
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "from urllib.parse import quote_plus\n",
+    "from sqlalchemy import create_engine\n",
+    "# conn_sqlite = sqlite3.connect(\"login.db\")\n",
+    "# c = conn_sqlite.cursor()\n",
+    "import streamlit as st \n",
+    "conn = st.experimental_connection(\"ppmpkm\", type=\"sql\")\n",
+    "load_dotenv(dotenv_path=\"scripts\\.env\")\n",
+    "postgres_username = os.environ.get(\"POSTGRES_USERNAME\")\n",
+    "postgres_password = quote_plus(os.environ.get(\"POSTGRES_PASSWORD\"))\n",
+    "postgres_url = os.environ.get(\"POSTGRES_URL\")\n",
+    "postgres_table = os.environ.get(\"POSTGRES_TABLE\")\n",
+    "\n",
+    "conn_postgres = create_engine(\n",
+    "    f\"postgresql://{postgres_username}:{postgres_password}@{postgres_url}/{postgres_table}\"\n",
+    ")\n",
     "# from scripts.db import (\n",
     "#     data_ket,\n",
     "#     target,\n",
@@ -37,6 +49,35 @@
     "# )\n",
     "# from yaml.loader import SafeLoader\n",
     "# import yaml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data= pd.read_parquet(r\"D:\\DATA\\ppmpkm.parquet\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "316"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.to_sql('ppmpkm', con=conn_postgres, index=False, if_exists='replace')"
    ]
   },
   {
